chore: add GitHub workflows and upgrade dependencies
- Add GitHub Actions workflows for automated code review
- Tomcat: 10.1.25 → 11.0.10
- Jakarta Servlet API: 5.0.0 → 6.1.0
- Jakarta JSP API: 2.3.6 → 4.0.0
- Jakarta JSTL API: 3.0.0 → 3.0.2
- logback-classic: 1.5.6 → 1.5.18
- commons-lang3: 3.14.0 → 3.18.0
- jackson-databind: 2.17.1 → 2.19.0
- assertj-core: 3.26.0 → 3.27.3
- mockito-core: 5.12.0 → 5.19.0
- junit-jupiter: 5.10.2 → 5.13.4
- spring-test: 6.1.10 → 6.2.10
- spring-context: 6.1.10 → 6.2.10
- h2: 2.2.224 → 2.3.232
- Remove deprecated setClearReferencesObjectStreamClassCaches calls
- Replace URL with URI.create() for better compatibility